10777
Some seriously weird shit going on here.

{code}
package java.lang

// SI-8367 shows something is wrong with primaryConstructor and it was made worse with the fix for SI-8192
// perhaps primaryConstructor should not return NoSymbol when isJavaDefined
// or, perhaps isJavaDefined should be refined (the package definition above is pretty sneaky) 
// also, why does this only happen for a (scala-defined!) class with this special name?
// (there are a couple of others: CloneNotSupportedException,InterruptedException)
class Throwable

// class CloneNotSupportedException 
// class InterruptedException
{code}

yields

{code}
RUNNER=scalac scala-hash v2.11.0-RC1 /Users/adriaan/Desktop/Bugs/t8367.scala -Xprint:typer
/Users/adriaan/Desktop/Bugs/t8367.scala:10: error: self constructor arguments cannot reference unconstructed `this`
// class InterruptedException
                             ^
[[syntax trees at end of                     typer]] // t8367.scala
package java.lang {
  class Throwable extends scala.AnyRef {
    def <init>(): Throwable = {
      Throwable.super.<init>();
      ()
    }
  }
}

one error found
{code}

wait, what? my comment has a type error!?
